--- a/public/index.html
+++ b/public/index.html
@@ -10,8 +10,14 @@
       content="Web site created using create-react-app"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
-    <link rel="stylesheet" href="/node_modules/bpg-nino-mtavruli/css/bpg-nino-mtavruli.min.css">
-    <link rel="stylesheet" href="/node_modules/bpg-arial/css/bpg-arial.min.css">
+    <link
+      rel="stylesheet"
+      href="/node_modules/bpg-nino-mtavruli/css/bpg-nino-mtavruli.min.css"
+    />
+    <link
+      rel="stylesheet"
+      href="/node_modules/bpg-arial/css/bpg-arial.min.css"
+    />
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
@@ -27,6 +33,7 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>React App</title>
+    <script id="react-dotenv" src="./env.js"></script>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
